--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.1",
     "body-parser": "^1.19.0",
     "kafka-node": "^4.1.3",
+    "kafkajs": "^1.12.0",
     "nodemon": "^1.17.3"
   }
 }
